test lattice & fix text align

--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ header, section {
 }
 
 section {
-    text-align: right;
+    text-align: left;
 }
 
 header {
